steve_v6_batch_v2.log
  File "/home/ubuntu/clawd/tresowealth-beta-site/steve_v6_complete_processor.py", line 589
    sources_md = "
                 ^
SyntaxError: unterminated string literal (detected at line 589)
